--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "apexcharts": "^4.2.0",
     "axios": "^1.5.1",
     "jose": "^5.8.0",
     "jquery": "^3.7.1",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
